# gaspar-finance

./: .env.example  .gitignore  CONTRACT.md  DECK.md  DEPLOY.md  LST.md  ORDER.md  README.md  TICKETS.md  package-lock.json  package.json  vercel.json
casper/: .gitignore  Cargo.toml  Makefile  Odra.toml  README.md  rust-toolchain.toml
casper/contracts/: Cargo.toml  Odra.toml
casper/contracts/src/: access_control.rs  branch_cspr.rs  branch_scspr.rs  errors.rs  interest.rs  interfaces.rs  lib.rs  liquidation_engine.rs  oracle_adapter.rs  redemption_engine.rs  registry.rs  router.rs  scspr_ybtoken.rs  stability_pool.rs  stablecoin.rs  styks_oracle.rs  token_adapter.rs  treasury.rs  types.rs  withdraw_queue.rs
casper/scripts/: backfill-package-hashes.mjs  backfill-package-hashes.sh  bind-frontend.sh  build-wasm-modules.sh  build.sh  cdp-adjust-rate.sh  cdp-adjust-vault.sh  cdp-close-vault.sh  cdp-open-vault.sh  cdp-vaults.sh  deploy.sh  deploy_testnet.sh  smoke-test.sh  sync-rate.sh  upgrade-scspr-ybtoken.sh  verify-lst-read.sh
casper/session/: Cargo.toml
casper/session/src/: lib.rs
casper/tests/: Cargo.toml
casper/tests/src/: lib.rs
config/: casper-testnet.json  oracle.styks.mainnet.json  oracle.styks.testnet.json
deployments/casper/: deployments.schema.json
docs/: README.md
docs/adr/: ADR-001-styks-oracle.md
docs/casper/: README.md  oracle-styks.md
docs/casper/decision/: parameter-confirmation.md
docs/casper/ops/: README.md  runbook-collateral-onboarding.md  runbook-deployment.md  runbook-sp-redemption-e2e.md  runbook-styks-oracle.md
docs/casper/schemas/: collateral-accounting-vector.schema.json  oracle-composite-vector.schema.json
docs/casper/spec/: README.md  collateral.md  oracle.md
docs/casper/test-vectors/: README.md  collateral-accounting.v1.json  oracle-composite.v1.json
docs/checklists/: oracle-styks-pr-checklist.md
docs/runbooks/: oracle-styks-ops.md
frontend/: .env.example  .env.local.bak  .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/rpc/: route.ts
frontend/app/lst/: page.tsx
frontend/app/redeem/: page.tsx
frontend/app/stability-pool/: page.tsx
frontend/components/: CdpAdjustVaultCard.tsx  CdpOpenVaultCard.tsx  CdpStatsCard.tsx  CdpVaultCard.tsx  Header.tsx  LstExchangeRateCard.tsx  LstProtocolStatsCard.tsx  LstStakeCard.tsx  LstStubWarning.tsx  LstUnstakeCard.tsx  LstWithdrawRequestsCard.tsx  NetworkCard.tsx  ProtocolStatusCard.tsx  SafeModeBanner.tsx  WalletCard.tsx
frontend/components/ui/: Button.tsx  Card.tsx  HealthBadge.tsx  InfoIcon.tsx  Input.tsx  Skeleton.tsx  StatCard.tsx  Tooltip.tsx  TxToast.tsx
frontend/hooks/: useBalances.ts  useCasperWallet.ts  useCdp.ts  useLst.ts  useRedemption.ts  useSafeMode.ts  useStabilityPool.ts  useTxToast.ts
frontend/lib/: casperDeploy.ts  casperRpc.ts  config.ts  constants.ts  format.ts  runtimeConfig.ts  utils.ts
frontend/public/config/: casper-testnet.json
scripts/: post-deploy.sh  update-contracts-md.sh
scripts/casper/: bind-frontend.sh  build.sh  cdp-adjust-rate.sh  cdp-adjust-vault.sh  cdp-close-vault.sh  cdp-open-vault.sh  cdp-vaults.sh  deploy.sh  smoke-test.sh  sync-rate.sh  test.sh  upgrade-scspr-ybtoken.sh  verify-lst-read.sh
