[workspace]
resolver = "2"
members = [
    "contracts",
    "tests",
    "session",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/example/cspr-cdp"

[workspace.dependencies]
# Odra framework for Casper smart contracts
odra = "2.4.0"
odra-modules = "2.4.0"
odra-casper-livenet-env = "2.4.0"
odra-casper-test-vm = "2.4.0"

# Core dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
pretty_assertions = "1.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
